curabox/force-app/main/default/objects/Contact/fields/AGB_alt__c.field-meta.xml
<CustomField>
    <fullName>AGB_alt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AGB alt</label>
    <type>Checkbox</type>
</CustomField>