curabox/force-app/main/default/objects/Contact/fields/AGB_neu__c.field-meta.xml
<CustomField>
    <fullName>AGB_neu__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AGB neu</label>
    <type>Checkbox</type>
</CustomField>