curabox/force-app/main/default/objects/Contact/fields/Alter__c.field-meta.xml
<CustomField>
    <fullName>Alter__c</fullName>
    <formula>IF( !ISNULL( Birthdate ), 
FLOOR((TODAY() - Birthdate)/365.2425), 

IF(!ISNULL(Geburtsjahr__c),
(YEAR(Today()) - Geburtsjahr__c),
NULL
))</formula>
    <label>Alter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>