curabox/force-app/main/default/objects/Contact/fields/Anrede_Text_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Anrede_Text_Marketing__c</fullName>
    <formula>if ( ISPICKVAL( Salutation , &apos;Herr&apos;),
&apos;Sehr geehrter Herr&apos;,
if ( ISPICKVAL( Salutation , &apos;Frau&apos;),
&apos;Sehr geehrte Frau&apos;,

&apos;Sehr geehrte Damen und Herren&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anrede Text Marketing</label>
    <type>Text</type>
</CustomField>