curabox/force-app/main/default/objects/Contact/fields/Anrede_Text_Vertrieb__c.field-meta.xml
<CustomField>
    <fullName>Anrede_Text_Vertrieb__c</fullName>
    <formula>if ( ISPICKVAL( Salutation , &apos;Herr&apos;),
&apos;Lieber Herr&apos;,
if ( ISPICKVAL( Salutation , &apos;Frau&apos;),
&apos;Liebe Frau&apos;,
&apos;Sehr geehrte Damen und Herren&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anrede_Text_Vertrieb</label>
    <type>Text</type>
</CustomField>