curabox/force-app/main/default/objects/Contact/fields/Art_des_Kontakts__c.field-meta.xml
<CustomField>
    <fullName>Art_des_Kontakts__c</fullName>
    <label>Art des Kontakts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Betreuer</fullName>
            </value>
            <value>
                <fullName>Ansprechpartner</fullName>
            </value>
            <value>
                <fullName>nicht zugeordnet</fullName>
            </value>
            <value>
                <fullName>Pflegebedürftige(r)</fullName>
            </value>
            <value>
                <fullName>Angehörige(r)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>