curabox/force-app/main/default/objects/Contact/fields/Art_Von_Handschuhe__c.field-meta.xml
<CustomField>
    <fullName>Art_Von_Handschuhe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>bevorzugter Art. für Einmalhandsch.</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Product_Group__r.Name</field>
            <operation>startsWith</operation>
            <value>Einmalhandschuhe</value>
        </filterItems>
        <infoMessage>test</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Kontakte</relationshipLabel>
    <relationshipName>Kontakte</relationshipName>
    <type>Lookup</type>
</CustomField>