curabox/force-app/main/default/objects/Contact/fields/Beihilfeberechtigt__c.field-meta.xml
<CustomField>
    <fullName>Beihilfeberechtigt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beihilfeberechtigt</label>
    <type>Checkbox</type>
</CustomField>