curabox/force-app/main/default/objects/Contact/fields/Bekannte_Krankheiten__c.field-meta.xml
<CustomField>
    <fullName>Bekannte_Krankheiten__c</fullName>
    <label>Bekannte Krankheiten</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alzheimer</fullName>
            </value>
            <value>
                <fullName>Arthrose</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Augenleiden</fullName>
            </value>
            <value>
                <fullName>Bluthochdruck</fullName>
            </value>
            <value>
                <fullName>Bronchitis / Lungenerkrankungen</fullName>
            </value>
            <value>
                <fullName>COPD</fullName>
            </value>
            <value>
                <fullName>Demenz</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Epilepsie</fullName>
            </value>
            <value>
                <fullName>Gebrechlichkeit</fullName>
            </value>
            <value>
                <fullName>Hemiparese</fullName>
            </value>
            <value>
                <fullName>Herzerkrankungen</fullName>
            </value>
            <value>
                <fullName>Herzinfakt</fullName>
            </value>
            <value>
                <fullName>Herzschrittmacher</fullName>
            </value>
            <value>
                <fullName>Hypotonie</fullName>
            </value>
            <value>
                <fullName>Inkontinenz</fullName>
            </value>
            <value>
                <fullName>Katheter</fullName>
            </value>
            <value>
                <fullName>KHK coronare</fullName>
            </value>
            <value>
                <fullName>Krebserkrankungen</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>Niereninsuffizienz</fullName>
            </value>
            <value>
                <fullName>Oberschenkelhalsbruch</fullName>
            </value>
            <value>
                <fullName>Parkinson</fullName>
            </value>
            <value>
                <fullName>Querschnittslähmung</fullName>
            </value>
            <value>
                <fullName>Rheuma</fullName>
            </value>
            <value>
                <fullName>Schlaganfall</fullName>
            </value>
            <value>
                <fullName>Schwerhörigkeit</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
            <value>
                <fullName>Stoffwechselerkrankungen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>