curabox/force-app/main/default/objects/Contact/fields/Betreuer__c.field-meta.xml
<CustomField>
    <fullName>Betreuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Angehöriger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Angehöriger)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>