curabox/force-app/main/default/objects/Contact/fields/Bettschutzeinlagen_quantity__c.field-meta.xml
<CustomField>
    <fullName>Bettschutzeinlagen_quantity__c</fullName>
    <label>Bettschutzeinlagen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>