curabox/force-app/main/default/objects/Contact/fields/Bewerber_Status__c.field-meta.xml
<CustomField>
    <fullName>Bewerber_Status__c</fullName>
    <label>Bewerber Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offen</fullName>
                <default>true</default>
                <label>Offen</label>
            </value>
            <value>
                <fullName>Abgelehnt</fullName>
            </value>
            <value>
                <fullName>Eingestellt</fullName>
            </value>
            <value>
                <fullName>Warten auf Bestätigung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>