curabox/force-app/main/default/objects/Contact/fields/Birthdate_Search__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Search__c</fullName>
    <description>This field is only for searching purposes.</description>
    <label>Birthdate Search</label>
    <type>TextArea</type>
</CustomField>