curabox/force-app/main/default/objects/Contact/fields/businessCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>businessCreatedDate__c</fullName>
    <description>createddate from Kunde__c</description>
    <label>Business CreatedDate</label>
    <type>DateTime</type>
</CustomField>