curabox/force-app/main/default/objects/Contact/fields/CB_Lieferung__c.field-meta.xml
<CustomField>
    <fullName>CB_Lieferung__c</fullName>
    <label>CB_Lieferung</label>
    <length>128</length>
    <type>Text</type>
</CustomField>