curabox/force-app/main/default/objects/Contact/fields/contact_identifier__c.field-meta.xml
<CustomField>
    <fullName>contact_identifier__c</fullName>
    <description>Eindeutige ID für jedes Kontaktobjekt für die Suche über SF</description>
    <displayFormat>C-{000000}</displayFormat>
    <label>Contact Number</label>
    <type>AutoNumber</type>
</CustomField>