curabox/force-app/main/default/objects/Contact/fields/Cross_Selling_Produkte__c.field-meta.xml
<CustomField>
    <fullName>Cross_Selling_Produkte__c</fullName>
    <description>Welche Cross Selling Produkte wurde angesprochen?</description>
    <inlineHelpText>Welche Cross Selling Produkte wurde angesprochen?</inlineHelpText>
    <label>Cross Selling Produkte</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Badumbau</fullName>
            </value>
            <value>
                <fullName>Betreuungsleistungen</fullName>
            </value>
            <value>
                <fullName>Curabox</fullName>
            </value>
            <value>
                <fullName>Pflegeschulungen</fullName>
            </value>
            <value>
                <fullName>Treppenlift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>