curabox/force-app/main/default/objects/Contact/fields/curabox_Kunde__c.field-meta.xml
<CustomField>
    <fullName>curabox_Kunde__c</fullName>
    <formula>IF( Passender_CB_Kunde__c != NULL, 
IMAGE(&quot;/servlet/servlet.FileDownload?file= 01558000001A3U9&quot;, &quot;curabox&quot;, 40, 40), 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>curabox Kunde</label>
    <type>Text</type>
</CustomField>