curabox/force-app/main/default/objects/Contact/fields/Delivery_interval__c.field-meta.xml
<CustomField>
    <fullName>Delivery_interval__c</fullName>
    <label>Lieferintervall curabox</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>monatlich</fullName>
            </value>
            <value>
                <fullName>zweimonatlich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>