curabox/force-app/main/default/objects/Contact/fields/Delivery_interval_bettschutzeinlagen__c.field-meta.xml
<CustomField>
    <fullName>Delivery_interval_bettschutzeinlagen__c</fullName>
    <label>Lieferintervall waschbare Bettschutzeinl</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>jährlich</fullName>
            </value>
            <value>
                <fullName>einmalig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>