curabox/force-app/main/default/objects/Contact/fields/duplicate_contact__c.field-meta.xml
<CustomField>
    <fullName>duplicate_contact__c</fullName>
    <formula>IF(Original_contact__c != NULL, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>duplicate contact</label>
    <type>Checkbox</type>
</CustomField>