curabox/force-app/main/default/objects/Contact/fields/Einmalhandschuhe_quantity__c.field-meta.xml
<CustomField>
    <fullName>Einmalhandschuhe_quantity__c</fullName>
    <label>Einmalhandschuhe</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>