curabox/force-app/main/default/objects/Contact/fields/eligible_for_aid__c.field-meta.xml
<CustomField>
    <fullName>eligible_for_aid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beihilfeberechtigt</label>
    <type>Checkbox</type>
</CustomField>