curabox/force-app/main/default/objects/Contact/fields/Empf_nger_der_monatlichen_Auflistung__c.field-meta.xml
<CustomField>
    <fullName>Empf_nger_der_monatlichen_Auflistung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empfänger der monatlichen Auflistung</label>
    <type>Checkbox</type>
</CustomField>