curabox/force-app/main/default/objects/Contact/fields/Familien_Zugeh_rigkeit__c.field-meta.xml
<CustomField>
    <fullName>Familien_Zugeh_rigkeit__c</fullName>
    <description>In welchem Verhältnis steht der Angehörige zur Familie</description>
    <inlineHelpText>In welchem Verhältnis steht der Angehörige zur Familie</inlineHelpText>
    <label>Familien-Zugehörigkeit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Art_des_Kontakts__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>(Schwieger-)Sohn</fullName>
            </value>
            <value>
                <fullName>(Schwieger-)Tochter</fullName>
            </value>
            <value>
                <fullName>Ehefrau</fullName>
            </value>
            <value>
                <fullName>Ehemann</fullName>
            </value>
            <value>
                <fullName>Mutter</fullName>
            </value>
            <value>
                <fullName>Vater</fullName>
            </value>
            <value>
                <fullName>Nichte</fullName>
            </value>
            <value>
                <fullName>Enkel</fullName>
            </value>
            <value>
                <fullName>Freund(in)</fullName>
            </value>
            <value>
                <fullName>Nachbar(in)</fullName>
            </value>
            <value>
                <fullName>Tante</fullName>
            </value>
            <value>
                <fullName>Onkel</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>