curabox/force-app/main/default/objects/Contact/fields/FFP2_Maske_quantity__c.field-meta.xml
<CustomField>
    <fullName>FFP2_Maske_quantity__c</fullName>
    <label>FFP2 Maske</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>