curabox/force-app/main/default/objects/Contact/fields/Flaechendesinfektion_quantity__c.field-meta.xml
<CustomField>
    <fullName>Flaechendesinfektion_quantity__c</fullName>
    <label>Flächendesinfektion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>