curabox/force-app/main/default/objects/Contact/fields/Formel_Nachname__c.field-meta.xml
<CustomField>
    <fullName>Formel_Nachname__c</fullName>
    <formula>if(CONTAINS(LastName,&apos;n.b.&apos;),&apos;&apos;,LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formel Nachname</label>
    <type>Text</type>
</CustomField>