curabox/force-app/main/default/objects/Contact/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>LastName + &quot;, &quot;+ FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>