curabox/force-app/main/default/objects/Contact/fields/Geburtsjahr__c.field-meta.xml
<CustomField>
    <fullName>Geburtsjahr__c</fullName>
    <description>Händisch angegebenes Alter</description>
    <label>Geburtsjahr</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>