curabox/force-app/main/default/objects/Contact/fields/Genehmigungsnummer__c.field-meta.xml
<CustomField>
    <fullName>Genehmigungsnummer__c</fullName>
    <inlineHelpText>Einige Pflegekassen verlangen zur Wiederbearbeitung/Abrechnung die Nennung der Genehmigungsnummer, welche auf den verschickten Genehmigungen vermerkt ist.</inlineHelpText>
    <label>Genehmigungsnummer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>