curabox/force-app/main/default/objects/Contact/fields/Haendedesinfektion_quantity__c.field-meta.xml
<CustomField>
    <fullName>Haendedesinfektion_quantity__c</fullName>
    <label>Händedesinfektion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>