curabox/force-app/main/default/objects/Contact/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>to separate the street name from house number for structured email tool</description>
    <label>House Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>