curabox/force-app/main/default/objects/Contact/fields/IK_Nummer_des_Tr_gers__c.field-meta.xml
<CustomField>
    <fullName>IK_Nummer_des_Tr_gers__c</fullName>
    <label>IK Nummer des Trägers</label>
    <length>15</length>
    <type>Text</type>
</CustomField>