curabox/force-app/main/default/objects/Contact/fields/Information_about_wunschbox__c.field-meta.xml
<CustomField>
    <fullName>Information_about_wunschbox__c</fullName>
    <inlineHelpText>In diesem Feld können relevante Infos über die Wunschbox hinterlassen werden.</inlineHelpText>
    <label>Infos zur Wunschbox</label>
    <type>TextArea</type>
</CustomField>