curabox/force-app/main/default/objects/Contact/fields/Kommentar_Cross_Selling__c.field-meta.xml
<CustomField>
    <fullName>Kommentar_Cross_Selling__c</fullName>
    <description>Was wurde bezüglich des Cross Selling besprochen?</description>
    <inlineHelpText>Was wurde bezüglich des Cross Selling besprochen?</inlineHelpText>
    <label>Kommentar Cross Selling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>