curabox/force-app/main/default/objects/Contact/fields/Kontakt_ID__c.field-meta.xml
<CustomField>
    <fullName>Kontakt_ID__c</fullName>
    <label>Kontakt ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>