curabox/force-app/main/default/objects/Contact/fields/Kranken_Pflegekasse__c.field-meta.xml
<CustomField>
    <fullName>Kranken_Pflegekasse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kranken-/Pflegekasse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>03 Kostenträger</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Angehoerige</relationshipName>
    <type>Lookup</type>
</CustomField>