curabox/force-app/main/default/objects/Contact/fields/Kreditinstitut__c.field-meta.xml
<CustomField>
    <fullName>Kreditinstitut__c</fullName>
    <label>Kreditinstitut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>