curabox/force-app/main/default/objects/Contact/fields/Kunde_Id__c.field-meta.xml
<CustomField>
    <fullName>Kunde_Id__c</fullName>
    <label>Kunde_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>