curabox/force-app/main/default/objects/Contact/fields/Kundennummer__c.field-meta.xml
<CustomField>
    <fullName>Kundennummer__c</fullName>
    <defaultValue>000000</defaultValue>
    <description>Kundennummer aus dem Altsystem +10000, für die Übergabe an die Fibu.</description>
    <externalId>true</externalId>
    <label>Kundennummer</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>