curabox/force-app/main/default/objects/Contact/fields/Latex_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Latex_Allergy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latex Allergie</label>
    <type>Checkbox</type>
</CustomField>