curabox/force-app/main/default/objects/Contact/fields/Letzter_CS_Versuch__c.field-meta.xml
<CustomField>
    <fullName>Letzter_CS_Versuch__c</fullName>
    <description>Gibt das Datum an, wann der letzte Cross Selling Versuch stattfand.</description>
    <inlineHelpText>Gibt das Datum an, wann der letzte Cross Selling Versuch stattfand.</inlineHelpText>
    <label>Letzter CS Versuch</label>
    <type>Date</type>
</CustomField>