curabox/force-app/main/default/objects/Contact/fields/Liefererlaubnis__c.field-meta.xml
<CustomField>
    <fullName>Liefererlaubnis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wenn &quot;Ja&quot; - wird die Fuktion &quot;Bedarf reduzieren&quot; NICHT zugreifen</description>
    <inlineHelpText>Wenn &quot;Ja&quot; - wird die Fuktion &quot;Bedarf reduzieren&quot; NICHT zugreifen</inlineHelpText>
    <label>Liefererlaubnis</label>
    <type>Checkbox</type>
</CustomField>