curabox/force-app/main/default/objects/Contact/fields/Marketing_Cloud_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_ID__c</fullName>
    <description>Marketing Cloud ID will be the identifier between the two clouds. The ID will only be displayed and “calculated” for ZWB datasets. It displays the sf.com Lead ID in lead conversion. and displayed ContactID in creating new Contact</description>
    <label>Marketing_Cloud_ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>