curabox/force-app/main/default/objects/Contact/fields/Medifox_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Medifox_Kunde__c</fullName>
    <formula>IF( Pflegedienst__c &lt;&gt; Null, 
IF (Pflegedienst__r.Medifox_Ausschluss__c = True, false, IF(Ursprungsanfrage__r.Medifox_b__c = True, True, false)), 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medifox Kunde</label>
    <type>Checkbox</type>
</CustomField>