curabox/force-app/main/default/objects/Contact/fields/Medikamente__c.field-meta.xml
<CustomField>
    <fullName>Medikamente__c</fullName>
    <label>Medikamente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASS</fullName>
            </value>
            <value>
                <fullName>Blutdruckmedikamente</fullName>
            </value>
            <value>
                <fullName>Epilepsie Mekidamente</fullName>
            </value>
            <value>
                <fullName>Insulin</fullName>
            </value>
            <value>
                <fullName>Marcumar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>