curabox/force-app/main/default/objects/Contact/fields/Mundschutz_quantity__c.field-meta.xml
<CustomField>
    <fullName>Mundschutz_quantity__c</fullName>
    <label>Mundschutz</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>