curabox/force-app/main/default/objects/Contact/fields/N_chster_Schritt__c.field-meta.xml
<CustomField>
    <fullName>N_chster_Schritt__c</fullName>
    <description>Dieses Feld kommt aus dem Lead und gibt an, was als nächstes geschehen soll. Anhand der Angabe werden Bestellungen ausgelöst oder z.B. Wiedervorlagen generiert.</description>
    <inlineHelpText>Dieses Feld kommt aus dem Lead und gibt an, was als nächstes geschehen soll. Anhand der Angabe werden Bestellungen ausgelöst oder z.B. Wiedervorlagen generiert.</inlineHelpText>
    <label>Nächster Schritt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gratisprobe</fullName>
            </value>
            <value>
                <fullName>Rezept</fullName>
            </value>
            <value>
                <fullName>Beratung</fullName>
            </value>
            <value>
                <fullName>CB_Post</fullName>
            </value>
            <value>
                <fullName>CB_Mail</fullName>
            </value>
            <value>
                <fullName>CB_Assistent_mail</fullName>
            </value>
            <value>
                <fullName>CB_Assistent_post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>