curabox/force-app/main/default/objects/Contact/fields/Name_Hausarzt__c.field-meta.xml
<CustomField>
    <fullName>Name_Hausarzt__c</fullName>
    <label>Name Hausarzt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>