curabox/force-app/main/default/objects/Contact/fields/Need_for_further_products__c.field-meta.xml
<CustomField>
    <fullName>Need_for_further_products__c</fullName>
    <label>Bedarf an weiteren Produkten</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cremes/Lotions</fullName>
            </value>
            <value>
                <fullName>Waschhandschuhe</fullName>
            </value>
            <value>
                <fullName>Wundversorgung</fullName>
            </value>
            <value>
                <fullName>Größere Betteinlagen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>