curabox/force-app/main/default/objects/Contact/fields/Need_for_supporting_aids__c.field-meta.xml
<CustomField>
    <fullName>Need_for_supporting_aids__c</fullName>
    <label>Bedarf an unterstützenden Hilfsmitteln</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nein</fullName>
            </value>
            <value>
                <fullName>Ja, kaufe ich selber</fullName>
            </value>
            <value>
                <fullName>Ja, beziehe ich über Hartmann</fullName>
            </value>
            <value>
                <fullName>Ja, beziehe ich über einen anderen LE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>