curabox/force-app/main/default/objects/Contact/fields/Nitril_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Nitril_Allergy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nitril Allergie</label>
    <type>Checkbox</type>
</CustomField>