curabox/force-app/main/default/objects/Contact/fields/OM_UserID__c.field-meta.xml
<CustomField>
    <fullName>OM_UserID__c</fullName>
    <description>UserID will be provided with a JSON from the website during the wizard process. UserID is unique for one IP address and cookie. UserID can change over time</description>
    <label>OM_UserID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>