curabox/force-app/main/default/objects/Contact/fields/Original_contact__c.field-meta.xml
<CustomField>
    <fullName>Original_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>save original contact for a duplicate.</description>
    <label>Original contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Original contact)</relationshipLabel>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>