curabox/force-app/main/default/objects/Contact/fields/Passender_CB_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Passender_CB_Kunde__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passender CB-Kunde</label>
    <referenceTo>Kunde__c</referenceTo>
    <relationshipLabel>Kontakte</relationshipLabel>
    <relationshipName>Kontakte</relationshipName>
    <type>Lookup</type>
</CustomField>