curabox/force-app/main/default/objects/Contact/fields/PDF_Antrag_Kostenuebernahme__c.field-meta.xml
<CustomField>
    <fullName>PDF_Antrag_Kostenuebernahme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Antrag zur Kostenübernahme</label>
    <type>Checkbox</type>
</CustomField>