curabox/force-app/main/default/objects/Contact/fields/PDF_Bestellformular__c.field-meta.xml
<CustomField>
    <fullName>PDF_Bestellformular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Bestellformular</label>
    <type>Checkbox</type>
</CustomField>