curabox/force-app/main/default/objects/Contact/fields/PDF_Empfaengnisvollmacht__c.field-meta.xml
<CustomField>
    <fullName>PDF_Empfaengnisvollmacht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Empfangsvollmacht für ambulanten PD</label>
    <type>Checkbox</type>
</CustomField>