curabox/force-app/main/default/objects/Contact/fields/PDF_Wechselerklaerung__c.field-meta.xml
<CustomField>
    <fullName>PDF_Wechselerklaerung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Wechselerklärung</label>
    <type>Checkbox</type>
</CustomField>