curabox/force-app/main/default/objects/Contact/fields/Pflegedienst__c.field-meta.xml
<CustomField>
    <fullName>Pflegedienst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pflegedienst</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Pflegedienst)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>