curabox/force-app/main/default/objects/Contact/fields/Pflegegrad__c.field-meta.xml
<CustomField>
    <fullName>Pflegegrad__c</fullName>
    <label>Pflegegrad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>Pflegegrad vorhanden</fullName>
            </value>
            <value>
                <fullName>Pflegegrad beantragt</fullName>
            </value>
            <value>
                <fullName>Noch unklar</fullName>
            </value>
            <value>
                <fullName>Keinen Pflegegrad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>