curabox/force-app/main/default/objects/Contact/fields/Pflegegrad_seit__c.field-meta.xml
<CustomField>
    <fullName>Pflegegrad_seit__c</fullName>
    <label>Pflegegrad seit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>