curabox/force-app/main/default/objects/Contact/fields/Pflegestufe__c.field-meta.xml
<CustomField>
    <fullName>Pflegestufe__c</fullName>
    <label>Pflegestufe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>3+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>