curabox/force-app/main/default/objects/Contact/fields/Pflegestufe_beantragt__c.field-meta.xml
<CustomField>
    <fullName>Pflegestufe_beantragt__c</fullName>
    <label>Pflegestufe beantragt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>keine</fullName>
            </value>
            <value>
                <fullName>PS beantragt</fullName>
            </value>
            <value>
                <fullName>PS1 beantragt</fullName>
            </value>
            <value>
                <fullName>PS2 beantragt</fullName>
            </value>
            <value>
                <fullName>PS3 beantragt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>